# Open_Cowork

./: .gitignore  .gitleaks.toml  .graphifyignore  AGENTS.md  CONTRIBUTING.md  DISCLAIMER.md  FEHLENDE_FEATURES_IM_CODE.md  IMPLEMENTATION_COMPLETE.md  LICENSE  NOTICE  PERMISSION_FIX_SUMMARY.md  README.md  SECURITY.md  SUPPORT.md  TRACEABILITY_MATRIX.md  WINDOWS_DESKTOP_APP_ANFORDERUNGEN.md  features.md  refactor-settings.js  refactor-ui.js  skills.md  update_requirements.py
.codex/: hooks.json
.cowork/: DRAFT_KNOWLEDGE.md  DRAFT_MEMORY.md
.github/: copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  privacy_question.yml
.github/workflows/: ci.yml  (+3 more)
.vex/: localai-cowork.openvex.json  open-cowork.openvex.json
app/: README.md  components.json  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  supply-chain-policy.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/python/crew_runtime/: crew_tools.py  main.py  requirements.txt  test_crew_runtime.py
app/src-tauri/python/crew_runtime/wheels/: README.txt  fastuuid-0.14.0-cp312-cp312-win_amd64.whl  instructor-1.15.1-py3-none-any.whl  jiter-0.13.0-cp312-cp312-win_amd64.whl  json_repair-0.25.3-py3-none-any.whl  lance_namespace-0.7.2-py3-none-any.whl  lance_namespace_urllib3_client-0.7.2-py3-none-any.whl  openai-2.33.0-py3-none-any.whl  opentelemetry_exporter_otlp_proto_http-1.34.1-py3-none-any.whl  portalocker-2.7.0-py2.py3-none-any.whl  protobuf-5.29.6-cp310-abi3-win_amd64.whl  pybase64-1.4.3-cp312-cp312-win_amd64.whl
app/src-tauri/src/: artifact_pipeline.rs  audit.rs  audit_service.rs  audit_sink.rs  capability_model.rs  claude_code_bridge.rs  context.rs  cowork_features.rs  credential_store.rs  crew_python_bridge.rs  db.rs  event_sink.rs  file_safety.rs  file_watch.rs  insights.rs  lib.rs  mcp.rs  memory_engine.rs  network_safety.rs  office_integration.rs  ollama.rs  process_control.rs  process_manager.rs  scheduler.rs  secure_config.rs  sensitive_data.rs  service_error.rs  skill_engine.rs  support_bundle.rs  terminal_backends.rs  terminal_sessions.rs  test_fixtures.rs  worker_sandbox.rs
docs/: ARCHITECTURE.md  ARCHITECTURE_CURRENT.md  CLAUDE_CODE_FEATURE_ADOPTION.md  DESKTOP_CONTROL_AND_COMPUTER_USE.md  DESKTOP_SMOKE_TEST.md  DEVELOPMENT_AND_OPERATIONS.md  FEATURE_IMPLEMENTIERUNGSVERGLEICH.md  OLLAMA_CONFIGURATION.md  OPENCLAW_HERMES_FEATURE_ADOPTION_DEEP_SPEC.md  OPENCLAW_HERMES_P0_IMPLEMENTATION_BACKLOG.md  OPENCLAW_HERMES_P0_SMOKE_CHECKLIST.md  PRODUCTION_MASTER_PLAN.md  SOURCE_OF_TRUTH.md  UI_ANFORDERUNGEN.md
graphify-out/: .graphify_labels.json  .graphify_learning.json  .vocab.txt  GRAPH_REPORT.md  manifest.json
scripts/: scan-secrets.mjs  validate-agent-discipline.mjs  validate-product-docs.mjs  validate-site.py
site/: 404.html  index.html  privacy.html  robots.txt  site.webmanifest  sitemap.xml  styles.css
tasks/: agent-memory-notes-example.md  agent-memory-prompts.md  task-chat-collapse-and-project-delete-requirements.md
(+301 files in other folders)
