[package]
name = "app"
version = "0.1.7"
description = "Local-first desktop workspace for agentic work with Ollama, MCP, tasks, and tools."
authors = ["noshitcoding"]
license = "Apache-2.0"
repository = "https://github.com/noshitcoding/Open_Cowork"
edition = "2021"
rust-version = "1.89"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["tray-icon"] }
tauri-plugin-log = "2"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls", "stream"] }
futures-util = "0.3"
tokio = { version = "1", features = ["net", "time"] }
thiserror = "2"
sha2 = "0.10"
hmac = "0.12"
getrandom = "0.3"
url = "2"
rusqlite = { version = "0.31", features = ["backup", "bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
notify = "6"
image = { version = "0.25", default-features = true }
zip = "2"
pdf-extract = "0.12"
pdfium-render = { version = "0.8.36", default-features = false, features = ["pdfium_latest", "thread_safe", "image"] }
csv = "1.3"
tauri-plugin-opener = "2.5.3"
portable-pty = "0.9.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
keyring = { version = "3.6.3", default-features = false, features = ["windows-native"] }
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
] }

[dev-dependencies]
lopdf = "0.42"
